--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="splide__track">
             <ul class="splide__list">
                 <li class="splide__slide"><img src="zdj1.jpeg"></li>
-                <li class="splide__slide"><img src="zdj2.jpg"></li>
+                <li class="splide__slide"><img src="zdj2.jpg" width="1024px"></li>
                 <li class="splide__slide"><img src="zdj3.jpg"></li>
                 <li class="splide__slide"><img src="zdj4.jpg"></li>
                 <li class="splide__slide"><img src="zdj5.jpg"></li>
